ANW-2102: Fix minor staff softserv layout issues

--- a/frontend/app/assets/stylesheets/archivesspace/form.scss
+++ b/frontend/app/assets/stylesheets/archivesspace/form.scss
@@ -172,10 +172,6 @@ form .form-group {
   float: right;
 }
 
-.form-actions .btn-submit-group {
-  float: left;
-}
-
 #save_and_finish_editing {
   margin-left: 4px;
   float: right;
